--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-rose-600" routerLink="/home">Home</a>
+                    <a i18n class="nav-link text-rose-600" routerLink="/home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-rose-600" routerLink="/matches">Match</a>
@@ -18,16 +18,16 @@
                     <a class="nav-link text-rose-600" routerLink="/login">Messages</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-rose-600" routerLink="/profile">Profile</a>
+                    <a class="nav-link text-rose-600" [routerLink]="ROUTES.PROFILE">Profile</a>
                 </li>
             </ul>
             <div class="d-flex">
 
-                <button class="btn btn-outline-rose rounded-pill me-2" routerLink="/login"
+                <button class="btn btn-outline-rose rounded-pill me-2" [routerLink]="ROUTES.LOGIN"
                     *ngIf="!isLoggedIn()">Login</button>
                 <button class="btn btn-link nav-link" (click)="onLogout()" *ngIf="isLoggedIn()">Logout</button>
 
-                <button class="btn btn-rose rounded-pill" routerLink="/register">Sign Up</button>
+                <button class="btn btn-rose rounded-pill" [routerLink]="ROUTES.REGISTER">Sign Up</button>
             </div>
         </div>
     </nav>
