--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
+<h1 i18n>Hello i18n!</h1>
+<p>{{ today | date }}</p>
+<button i18n class="btn btn-success">Submit</button>
 
 <div class="container">
   <router-outlet></router-outlet>
