--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -17,17 +17,41 @@
                 <li class="nav-item">
                     <a class="nav-link text-rose-600" routerLink="/login">Messages</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-rose-600" [routerLink]="ROUTES.PROFILE">Profile</a>
-                </li>
+
             </ul>
             <div class="d-flex">
+                <div class="d-flex">
+                    <p class="mr-1">{{userData?.firstName}}</p>
+                    <p *ngIf="userData?.middleName">{{userData?.middleName}}</p>
+                    <p>{{ userData?.lastName}}</p>
+                </div>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item dropdown">
 
-                <button class="btn btn-outline-rose rounded-pill me-2" [routerLink]="ROUTES.LOGIN"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-circle"></i>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li>
+                                <a class="dropdown-item" [routerLink]="ROUTES.PROFILE" *ngIf="isLoggedIn()"
+                                    (click)="navigateToProfile()">Profile</a>
+                            </li>
+                            <li><a class="dropdown-item" [routerLink]="ROUTES.LOGIN" *ngIf="!isLoggedIn()">
+                                    Login</a></li>
+                            <li><a class="dropdown-item" href="#" (click)="onLogout()" *ngIf="isLoggedIn()">Logout</a>
+                            </li>
+                            <li><a class="dropdown-item" [routerLink]="ROUTES.REGISTER" *ngIf="!isLoggedIn()">Sign
+                                    Up</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <!-- <button class="btn btn-outline-rose rounded-pill me-2" [routerLink]="ROUTES.LOGIN"
                     *ngIf="!isLoggedIn()">Login</button>
                 <button class="btn btn-link nav-link" (click)="onLogout()" *ngIf="isLoggedIn()">Logout</button>
 
-                <button class="btn btn-rose rounded-pill" [routerLink]="ROUTES.REGISTER">Sign Up</button>
+                <button class="btn btn-rose rounded-pill" [routerLink]="ROUTES.REGISTER">Sign Up</button> -->
             </div>
         </div>
     </nav>
