--- a/src/styles/_mt-btn.scss
+++ b/src/styles/_mt-btn.scss
@@ -18,3 +18,11 @@
     background-color: #f43f5e;
     color: white;
 }
+
+.btn-tab-outline {
+    border-color: #e11d48;
+
+    &:hover {
+        border-color: #e11d48;
+    }
+}
