--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid bg-gradient-pink-rose min-vh-100 d-flex align-items-center justify-content-center">
-    <div class="card shadow-lg mt-5 mb-5" style="max-width: 400px;">
+    <div class="card shadow-lg mt-5 mb-5" style="max-width: 600px;">
         <div class="card-body p-5">
             <h2 class="card-title text-center text-rose-700 mb-4">Find Your Perfect Match</h2>
             <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
@@ -21,8 +21,8 @@
                         Password must be at least 4 characters long.
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary w-100 rounded-pill"
-                    [disabled]="loginForm.invalid">Login</button>
+                <button type="submit" class="btn btn-primary w-100 rounded-pill" [disabled]="loginForm.invalid"
+                    style="text-transform: uppercase;">Login</button>
             </form>
             <div class="text-center mt-4">
                 <a href="#" class="text-rose-500 text-decoration-none">Forgot password?</a>
@@ -30,7 +30,9 @@
             <hr class="my-4">
             <div class="text-center">
                 <p class="text-muted mb-0">Don't have an account?</p>
-                <a href="#" class="btn btn-outline-rose rounded-pill mt-2">Sign Up</a>
+                <a [routerLink]="REGISTER_PAGE" class="btn btn-outline-rose w-100 rounded-pill mt-2"
+                    style="text-transform: uppercase;">Sign
+                    Up Free</a>
             </div>
         </div>
     </div>
