--- a/src/app/pages/profile/profile-page/profile-page.component.html
+++ b/src/app/pages/profile/profile-page/profile-page.component.html
@@ -15,7 +15,7 @@
                                 </div>
                             </ng-container> -->
                             <div class="text-center">
-                                <img *ngIf=" imageUrl" [src]="imageUrl" alt="Profile Picture" class="rounded-circle"
+                                <img *ngIf="imageUrl" [src]="imageUrl" alt="Profile Picture" class="rounded-circle"
                                     width="100" height="100" />
                             </div>
                             <ng-container *ngIf="!imageUrl">
@@ -191,6 +191,45 @@
                                     </ng-template>
                                 </div>
                             </div>
+
+                            <!-- Height input -->
+                            <div class=" form-group row">
+                                <label for="height" class="col-sm-2 col-form-label">Height</label>
+                                <div class="col-sm-10">
+                                    <ng-container *ngIf="editingField !== 'height'; else heightEditMode">
+                                        <div class="input-group mb-3">
+                                            <input type="text" readonly class="form-control" id="height"
+                                                value=" {{ profileForm.get('height')?.value || 'Not provided' }}">
+                                            <div class="input-group-append">
+                                                <button (click)="startEditing('height')" class="btn btn-light">
+                                                    <i class="bi bi-pencil"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </ng-container>
+
+                                    <ng-template #heightEditMode>
+                                        <form [formGroup]="heightForm">
+                                            <div class="input-group mb-3">
+                                                <input type="text" class="form-control" formControlName="feet"
+                                                    placeholder="Feet" aria-label="Feet">
+                                                <span class="input-group-text">&</span>
+                                                <input type="text" class="form-control" formControlName="inches"
+                                                    placeholder="Inches" aria-label="Inches">
+                                                <div class="input-group-append">
+                                                    <button (click)="saveEdit('height')" class="btn btn-light">
+                                                        <i class="bi bi-floppy"></i>
+                                                    </button>
+                                                    <button (click)="cancelEdit()" class="btn btn-light">
+                                                        <i class="bi bi-x-lg"></i>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </ng-template>
+                                </div>
+                            </div>
+
                             <!-- Gender input -->
                             <div class=" form-group row">
                                 <label for="gender" class="col-sm-2 col-form-label">Gender</label>
@@ -215,6 +254,43 @@
                                             </select>
                                             <div class="input-group-append">
                                                 <button (click)="saveEdit('gender')" class="btn btn-light">
+                                                    <i class="bi bi-floppy"></i>
+                                                </button>
+                                                <button (click)="cancelEdit()" class="btn btn-light">
+                                                    <i class="bi bi-x-lg"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </ng-template>
+                                </div>
+                            </div>
+
+                            <!-- Income input -->
+                            <div class=" form-group row">
+                                <label for="income" class="col-sm-2 col-form-label">Income</label>
+                                <div class="col-sm-10">
+                                    <ng-container *ngIf="editingField !== 'income'; else incomeEditMode">
+                                        <div class="input-group mb-3">
+                                            <input type="text" readonly class="form-control" id="income"
+                                                value=" {{ profileForm.get('income')?.value || 'Not provided' }}">
+                                            <div class="input-group-append">
+                                                <button (click)="startEditing('income')" class="btn btn-light">
+                                                    <i class="bi bi-pencil"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </ng-container>
+
+                                    <ng-template #incomeEditMode>
+                                        <div class="input-group mb-3">
+                                            <select formControlName="income" class="form-select">
+                                                <option *ngFor="let income of incomes" [value]="income"
+                                                    [selected]="income === profileForm.get('income')?.value">
+                                                    {{income }}
+                                                </option>
+                                            </select>
+                                            <div class="input-group-append">
+                                                <button (click)="saveEdit('income')" class="btn btn-light">
                                                     <i class="bi bi-floppy"></i>
                                                 </button>
                                                 <button (click)="cancelEdit()" class="btn btn-light">
