--- a/src/app/pages/registration/registration-page/registration-page.component.html
+++ b/src/app/pages/registration/registration-page/registration-page.component.html
@@ -4,14 +4,15 @@
             <h2 class="card-title text-center text-rose-700 mb-4">Looks like you're new here!</h2>
             <form *ngIf="!showOtpInput">
                 <div class="input-group mb-3">
-                    <select *ngIf="isMobileNumber" [(ngModel)]="countryCode" name="countryCode">
-                        <option value="+1">USA (+1)</option>
-                        <option value="+44">UK (+44)</option>
-                        <option value="+91">India (+91)</option>
-                        <option value="+92">Pakistan (+92)</option>
-                        <option value="+966">Saudi Arabia (+966)</option>
-                        <!-- Add more country codes as needed -->
+                    <select class="form-control" *ngIf="isMobileNumber" [(ngModel)]="selectedCountryCode"
+                        name="countryCode">
+                        <option *ngFor="let country of countries" [value]="country.code">
+                            {{country.name}} ({{ country.code
+                            }})
+                        </option>
+
                     </select>
+
                     <input class="form-control" [(ngModel)]="emailOrMobile" (input)="onInputChange()"
                         placeholder="Email or Mobile" required name="emailOrMobile">
                 </div>
@@ -26,15 +27,16 @@
                     </div>
                     <small class="form-text" [style.color]="passwordStrengthColor">{{passwordStrengthText}}</small>
                 </div>
-                <div class="d-flex justify-content-end">
-                    <button class="btn btn-primary" (click)="initiateSignup()">Sign Up</button>
+                <div class=" mt-3">
+                    <button class="btn btn-primary w-100" (click)="initiateSignup()">Sign Up</button>
                 </div>
             </form>
 
             <form *ngIf="showOtpInput">
                 <input class="form-control mb-3" [(ngModel)]="otp" placeholder="Enter OTP" required name="otp">
                 <div class="d-flex justify-content-end">
-                    <button class="btn btn-primary" (click)="validateOtpAndCompleteSignup()">Verify OTP and Complete
+                    <button class="btn btn-primary" (click)="validateOtpAndCompleteSignup()">Verify OTP and
+                        Complete
                         Signup</button>
                 </div>
             </form>
